# mrc-backend

./: .dockerignore  .editorconfig  .env.example  .env.standalone  .env.web  .gitignore  .gitlab-ci.yml  Dockerfile  manage.py  pyproject.toml  requirements.txt  run  start.sh
client/: admin.py  apps.py  models.py  mqtt.py  serializers.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_alter_remoteaccess_api_key_and_more.py  0003_remove_remoteaccess_updated_at.py  0004_alter_remoteaccess_options.py  0005_remoteaccess_area_remoteaccess_org.py
core/: admin.py  apps.py  import_export.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_digitalservice_options_and_more.py  0002_area_uuid.py  0003_auto_20230419_1510.py  0003_remove_digitalservice_items_and_more.py  0004_alter_area_uuid.py  0004_remove_item_description.py  0005_digitalservice_url.py  0005_digitalservice_uuid_digitaluse_uuid_item_uuid_and_more.py  0006_auto_20230420_1111.py  0006_digitalservice_use_alter_digitalservice_uses.py  0007_alter_digitalservice_uuid_alter_digitaluse_uuid_and_more.py  0007_remove_digitalservice_uses.py  0008_area_remove_digitalservice_zone_delete_zone_and_more.py  0008_room_main_color.py  0009_alter_item_image.py  0010_remove_item_image_remove_room_description_and_more.py  0011_item_image_room_video_alter_item_name_and_more.py  0012_item_light_ctrl_item_light_pin.py  0013_room_light_pin.py  0014_room_position.py  0015_alter_room_options_alter_room_light_pin.py  0016_room_next_room.py  0017_auto_20230830_1803.py  0018_remove_room_light_pin.py  0019_alter_area_name_alter_digitalservice_title_and_more.py  0020_alter_digitalservice_url.py  0021_digitalservice_contact_delete_digitalservicecontact.py  0022_digitalservice_scope.py  0023_remove_digitalservice_area_delete_area.py  0024_alter_digitalservice_url.py  0026_contribution.py  (+4 more)
data/: feedback_questions.csv  mrc.csv  services.csv
db/: web.db
demo/: admin.py  models.py  mqtt.py  serializers.py  urls.py  views.py
feedback/: admin.py  models.py  serializers.py  urls.py  views.py
mrc/: asgi.py  settings.py  urls.py  wsgi.py
org/: admin.py  models.py  registration_urls.py  serializers.py  urls.py  views.py
parameters/: admin.py  models.py
website/: urls.py
(+60 files in other folders)
